src/app/projects/project-detail/project-detail.component.scss
.content-wrap {
  background-image: url("/assets/img/project-bg.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  background-color: rgb(22, 21, 21);
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
}

.content {
  height: 100%;
  max-width: 1440px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 100px;
  > .description {
    width: 488px;
  }
}

.col-2 {
  display: flex;
  flex-direction: column;
  padding-top: 150px;
  gap: 30px;
  > img {
    width: 500px;
    height: 350px;
    border-radius: 20px;
  }
}

.description {
  > h1 {
    font-size: 60px;
    margin: 0;
    display: inline-block;
  }
  > .go-back {
    display: flex;
    margin-top: 20px;
    align-items: center;
    gap: 10px;
    &:hover {
      color: rgb(247, 123, 87);
      cursor: pointer;
    }
    > img {
      width: 24px;
      height: 24px;
    }
  }
}
span {
  font-weight: 700;
}

.tools {
  display: flex;
  align-items: center;
  gap: 10px;
  > img {
    width: 24px;
    height: 24px;
  }
}

.next-project {
  color: white;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 10px;
  > img {
    width: 24px;
    height: 24px;
  }
  &:hover {
    color: rgb(230, 183, 22);
    cursor: pointer;
  }
}

.links {
  display: flex;
  justify-content: flex-end;
  display: flex;
  gap: 20px;
}
.btn {
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  border: 1px solid #f8f9fa;
  border-radius: 100px;
  font-size: 18px;
  width: 134px;
  height: 40px;
  box-shadow: 2px 4px 0 0 #f8f9fa;
  transition: all 100ms ease-in-out;
  &:hover {
    background-color: #f87a55;
    transform: translate(2px, 4px);
    box-shadow: none;
    cursor: pointer;
  }
}
@import "./responsive";

